Added paragraph to text
Added paragraph to text

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div id="wrapper">
 
             <h1>Hello World</h1>
+            <p>This is some test text</p>
 
         </div>
     </body>
